--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Todo App</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
   <link rel="stylesheet" href="style.css">
 </head>
