--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header_img">
+    <a href="https://goal-life.com/page/method/matrix-eisenhower" class="header_link">Want more details?</a>
   </header>
   <main class="centered-main-page-element">
     <section>
