refactor(extended-1.1, extended-2.1): add tags for sections, refactor sections title

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header_img">
     <a href="https://goal-life.com/page/method/matrix-eisenhower" class="header_link">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section>
-      <label for="new-task">Add Item</label>
+  <main class="main">
+    <section class="add">
+      <h3 class="section_title">Add Item</h3>
       <div class="task-row-wrapper">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
     </section>
-    <section>
-      <h3>Todo</h3>
+    <section class="todo">
+      <h3 class="section_title">Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -43,8 +43,8 @@
         </li>
       </ul>
     </section>
-    <section>
-      <h3>Completed</h3>
+    <section class="completed">
+      <h3 class="section_title">Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
