--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main class="main">
     <section class="add">
       <h3 class="section_title">Add Item</h3>
-      <div class="task-row-wrapper">
+      <div class="row_wrapper">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
@@ -23,7 +23,7 @@
     <section class="todo">
       <h3 class="section_title">Todo</h3>
       <ul id="incompleteTasks">
-        <li>
+        <li class="row_wrapper">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
@@ -32,7 +32,7 @@
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="row_wrapper">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -46,7 +46,7 @@
     <section class="completed">
       <h3 class="section_title">Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="row_wrapper">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
