--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
   <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header_img">
     <a href="https://goal-life.com/page/method/matrix-eisenhower" class="header_link">Want more details?</a>
