--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section class="todo">
       <h3 class="section_title">Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li class="row_wrapper">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
