--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h3 class="section_title">Add Item</h3>
       <div class="row_wrapper">
         <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
     </section>
     <section class="todo">
@@ -27,8 +27,8 @@
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="button edit-button">Edit</button>
+          <button class="button delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -36,8 +36,8 @@
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="button edit-button">Save</button>
+          <button class="button delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -50,8 +50,8 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="button edit-button">Edit</button>
+          <button class="button delete-button">
             <img src="./remove.svg">
           </button>
         </li>
