--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul id="incomplete-tasks">
         <li class="row_wrapper">
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
+          <p class="task">Pay Bills</p>
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
@@ -34,7 +34,7 @@
         </li>
         <li class="row_wrapper">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
+          <p class="task">Go Shopping</p>
           <input type="text" value="Go Shopping" class="task">
           <button class="button edit-button">Save</button>
           <button class="button delete-button">
@@ -48,7 +48,7 @@
       <ul id="completed-tasks">
         <li class="row_wrapper">
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
+          <p class="task">See the Doctor</p>
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
