refactor(extended-1.2, basics-3.2, basics-3.4): add alt and class to remove img, rewrite js and change selectors in css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove" class="remove-img">
           </button>
         </li>
         <li class="row_wrapper">
@@ -38,7 +38,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="button edit-button">Save</button>
           <button class="button delete-button">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove" class="remove-img">
           </button>
         </li>
       </ul>
@@ -52,7 +52,7 @@
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove" class="remove-img">
           </button>
         </li>
       </ul>
