refactor(extended-1.1): add selectors to checkboxes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3 class="section_title">Todo</h3>
       <ul id="incomplete-tasks">
         <li class="row_wrapper">
-          <input type="checkbox">
+          <input type="checkbox" class="checkbox">
           <p class="task">Pay Bills</p>
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
@@ -33,7 +33,7 @@
           </button>
         </li>
         <li class="row_wrapper">
-          <input type="checkbox">
+          <input type="checkbox" class="checkbox">
           <p class="task">Go Shopping</p>
           <input type="text" value="Go Shopping" class="task">
           <button class="button edit-button">Save</button>
@@ -47,7 +47,7 @@
       <h3 class="section_title">Completed</h3>
       <ul id="completed-tasks">
         <li class="row_wrapper">
-          <input type="checkbox" checked>
+          <input type="checkbox" class="checkbox" checked>
           <p class="task">See the Doctor</p>
           <input type="text" class="task">
           <button class="button edit-button">Edit</button>
