--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <ul id="incomplete-tasks">
         <li class="row_wrapper">
           <input type="checkbox" class="checkbox">
-          <p class="task">Pay Bills</p>
-          <input type="text" class="task">
+          <p class="task-title">Pay Bills</p>
+          <input type="text" class=" task edit-task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
             <img src="./remove.svg" alt="remove" class="remove-img">
@@ -34,8 +34,8 @@
         </li>
         <li class="row_wrapper">
           <input type="checkbox" class="checkbox">
-          <p class="task">Go Shopping</p>
-          <input type="text" value="Go Shopping" class="task">
+          <p class="task-title">Go Shopping</p>
+          <input type="text" value="Go Shopping" class="task edit-task">
           <button class="button edit-button">Save</button>
           <button class="button delete-button">
             <img src="./remove.svg" alt="remove" class="remove-img">
@@ -48,8 +48,8 @@
       <ul id="completed-tasks">
         <li class="row_wrapper">
           <input type="checkbox" class="checkbox" checked>
-          <p class="task">See the Doctor</p>
-          <input type="text" class="task">
+          <p class="task-title">See the Doctor</p>
+          <input type="text" class="task edit-task">
           <button class="button edit-button">Edit</button>
           <button class="button delete-button">
             <img src="./remove.svg" alt="remove" class="remove-img">
