refactor(basics-3.1): change editMode selector to edit-mode

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./remove.svg" alt="remove" class="remove-img">
           </button>
         </li>
-        <li class="row_wrapper">
+        <li class="row_wrapper  edit-mode">
           <input type="checkbox" class="checkbox">
           <p class="task-title">Go Shopping</p>
           <input type="text" value="Go Shopping" class="task edit-task">
